# mri-generative-priors

./: .gitignore  CHECKPOINTS.md  CLAUDE.md  README.md  TUTORIAL.md  main.json  pixi.toml  pyproject.toml  solutions.json
.github/workflows/: ci.yml
data/: REGISTER_FIRST.md  download_subset.py  preprocess.py
notebooks/: 00_data_and_kspace.ipynb  01_train_vae.ipynb  02_evaluate_prior.ipynb  03_recon_map.ipynb  04_recon_posterior.ipynb  05_diffusion_stretch.ipynb  06_assemble_results.ipynb
scripts/: milestone_badge.py  smoke_slice.py
src/mrigen/: __init__.py  data.py  fourier.py  masks.py  metrics.py  setup_check.py  train_diffusion.py  train_vae.py  viz.py
src/mrigen/models/: __init__.py  diffusion.py  vae.py
src/mrigen/recon/: __init__.py  classical.py  diffusion_dps.py  operators.py  vae_numpyro.py
tests/: conftest.py  test_data.py  test_fourier.py  test_masks.py  test_metrics.py  test_operators.py  test_smoke.py  test_vae.py
